本番公開ための修正

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 const navItems = [
   { name: "ホーム", href: "/" },
-  { name: "プロフィール", href: "/profile" },
+  // { name: "プロフィール", href: "/profile" },
   { name: "お問い合わせ", href: "/contact" },
 ];
 ---
