--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -13,5 +13,13 @@ import profileImg from "../static/images/profile.png";
     width={250}
     height={250}
   />
-  <div><p class="text-center text-xl mt-2">経歴</p><p>本文</p></div>
+  <div>
+    <p class="text-center text-xl mt-2">自己紹介</p>
+    <p>
+      JS・React・Next、Svelte、フロントエンドがメイン。<br
+      />実務歴3年目のエンジニアです。 フルスタックを目指してバックエンド学習中。
+      <br />趣味はとんこつラーメン、読書、サウナ
+      <br />お仕事のご依頼お待ちしております。
+    </p>
+  </div>
 </div>
