--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -10,11 +10,14 @@ const { tagList } = Astro.props;
   <div class="text-center text-2xl mb-5">タグ一覧</div>
   <ul class="flex flex-wrap gap-3">
     {
-      tagList.map((tag) => (
-        <li class="badge badge-primary min-w-20 min-h-8 font-bold text-gray-200 hover:bg-blue-hover hover:border-blue-hover">
-          <a href={`/tags/${tag}`}>{tag}</a>
-        </li>
-      ))
+      tagList?.map(
+        (tag) =>
+          tag && (
+            <li class="badge badge-primary min-w-20 min-h-8 font-bold text-gray-200 hover:bg-blue-hover hover:border-blue-hover">
+              <a href={`/tags/${tag}`}>{tag}</a>
+            </li>
+          ),
+      )
     }
 
     <!-- <li class="badge badge-secondary">テスト</li>
